--- a/src/template.html
+++ b/src/template.html
@@ -1,30 +1,27 @@
 <!DOCTYPE html>
-
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>{{title}}</title>
 
-    <style type="text/css">
-        /* from https://jrl.ninja/etc/1/ */
-        main {
-            max-width: 70ch;
-            padding: 2ch;
-            margin: auto;
-        }
-    </style>
+<head>
+  <meta charset="utf-8">
+  <title>{{title}}</title>
+  <style type="text/css">
+    body {
+      max-width: 70ch;
+      padding: 2ch;
+      margin: auto;
+    }
 
-    <style type="text/css">
-      main img {
-        max-width: 70ch;
-      }
-    </style>
-  </head>
+    body img {
+      max-width: 70ch;
+    }
+  </style>
+</head>
 
-  <main>
-	<h1>{{title}}</h1>
+<body>
+  <h1>{{title}}</h1>
 
-{{{body}}}
+  {{{body}}}
 
-  </main>
+</body>
+
 </html>
